<resources>
    <string name="app_name">PopulationCensus</string>
    <string name="population_">ПЕРЕПИСЬ \n НАСЕЛЕНИЕ</string>
    <string name="skip">Пропустить</string>
    <string name="next">Следующий</string>
    <string name="text_main_fragment1">Возможность участвовать в переписи населения</string>
    <string name="text_about_fragment1">В нашем приложении каждый гражданин
может принять участие в переписи населения,
 где бы он не находился.
</string>
    <string name="text_main_fragment2">Следите за переписью населения в реальном времени</string>
    <string name="text_about_fragment2">
        Хотите следить за переписью населения?\n
        За всем можно следить здесь, все анкеты появляются здесь в реальном времени, каждый город отдельно.
</string>
    <string name="text_main_fragment3">Узнайте актуальную информацию по вашему городу</string>
    <string name="text_about_fragment3">
        Просматривайте статистику по каждому городу отдельно.\n
        Узнавайте информацию про население и про его конкретные показатели.
</string>
    <string name="main_title">Главная страница</string>
    <string name="hiUser">Привет,</string>
    <string name="mainQuestion">Вы уже заполнили анкету?</string>
    <string name="services">Список услуг</string>
    <string name="service1">Создание анкеты</string>
    <string name="service2">Статистика</string>
    <string name="list_title">Список анкет</string>
    <string name="info_about">Ответы на вопросы</string>
    <string name="profile">Личный аккаунт</string>
    <string name="welcome">Привет</string>
    <string name="ques1"><b>Что такое перепись населения в России?</b>\n
        Собирается информация о всех жителях России, об их возрасте, городе, семейном положении, поле.
        Все это хранится в нашем приложении.
    </string>
    <string name="ques2"><b>Кто имеет право участвовать в переписи?</b>\n
        В соответствии с законом, приложение собирает информацию обо всех жителях России вне зависимости от гражданства, а также о гражданах России, которые постоянно проживают в России, но находятся на дату переписи за пределами страны.
    </string>
    <string name="ques3"><b>Надо ли называть имя, фамилию и отчество?</b>\n
        Приложению необходимо спросить имя, чтобы знать, как обращаться к респонденту и исключить путаницу.
    </string>
    <string name="infoProfile">Вход</string>
    <string name="infoProfile2">Регистрация</string>
    <string name="infoProfile3">Выход</string>
    <string name="create_title">Создание анкеты</string>
    <string name="createCity">Город</string>
    <string name="createClc">Местоположения</string>
    <string name="createSex">Пол</string>
    <string name="createAge">Возраст</string>
    <string name="createFamily">Семейное положение</string>
    <string name="createForm">Оставить анкету</string>
    <string-array name="spinnerSex">
        <item>None</item>
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
    <string-array name="spinnerFamily">
        <item>None</item>
        <item>Женат</item>
        <item>Замужем</item>
        <item>Разведены</item>
        <item>Не в браке</item>
    </string-array>
    <string name="logTitle">Перепись населения</string>
    <string name="login">Авторизоваться</string>
    <string name="logText">Хотите зарегистрироваться?</string>
    <string name="logReg">Регистрация</string>
    <string name="regTitle">ПЕРЕПИСЬ НАСЕЛЕНИЯ</string>
    <string name="regRegis">Зарегистрироваться</string>
    <string name="regAuth">Авторизоваться</string>
    <string name="WelcomeTitle">Добро пожаловать</string>
    <string name="WelcomeUser">Пользователь</string>
    <string name="stats">Статистка</string>
    <string name="count">Количество анкет: </string>
    <string name="count2">Количество пенсионеров: </string>
    <string name="count3">Количество зарегистрированных городов: </string>
    <string name="count4">Количество разведенных людей: </string>
    <string name="count5">Количество мужчин: </string>
    <string name="count6">Количество женщин: </string>
    <string name="UserName">Имя пользователья</string>
    <string name="FIO">ФИО</string>
    <string name="password">Пароль</string>
    <string name="RepeatPassword">Повторите пароль</string>
</resources>